...
  Size get preferredSize => const Size.fromHeight(64);

  @override
  Widget build(BuildContext context) => AppBar(
    toolbarHeight: 64,
    leading: IconButton(
      tooltip: '返回',
      onPressed: onBack,
      icon: CustomPaint(
        size: const Size.square(24),
        painter: _BackPainter(Theme.of(context).colorScheme.onSurface),
      ),
    ),
...
